# LTL_model_checking

./: CMakeLists.txt  Expr.cpp  Expr.hpp  NBA.cpp  NBA.hpp  NestedDFS.cpp  NestedDFS.hpp  Parser.cpp  Parser.hpp  Product.cpp  Product.hpp  SCCProcessor.cpp  SCCProcessor.hpp  TS.hpp  Utils.hpp  document.md  main.cpp  readme.md
testcases/: TS.txt
